# CCNN

./: .gitignore  LICENSE  Makefile
app_examples/intelligent_doctor/surgical_agent/: .gitignore  Dockerfile  Makefile  docker-compose-third-party.yml  docker-compose.yml  pyproject.toml  requirements.txt
app_examples/intelligent_doctor/surgical_agent/data/images/: test_chest_user_15_chest_ct_001.dcm  test_chest_user_16_chest_xray_001.dcm  test_chest_user_17_chest_mri_001.dcm
app_examples/intelligent_doctor/surgical_agent/docs/: MAKEFILE_AND_VERSION_GUIDE.md  分诊服务与专科智能体服务对接接口文档-qm.md  微服务架构图.md  项目结构分析.md
app_examples/intelligent_doctor/surgical_agent/scripts/: add_third_party_config.ps1  execute_user_manager_migration.py  init_mysql.sql  init_mysql_default_data.py
app_examples/intelligent_doctor/surgical_agent/scripts/migration/: migrate_database.py  migrate_user_manager_to_mysql.py
app_examples/intelligent_doctor/surgical_agent/scripts/startup/: start_all.py  start_backend.py
app_examples/intelligent_doctor/surgical_agent/src/: main.py  version.py
app_examples/intelligent_doctor/surgical_agent/src/api/: auth.py  diagnosis.log.md  diagnosis.py  oidc_rp.py
app_examples/intelligent_doctor/surgical_agent/src/config/: database_config.py  settings.py
app_examples/intelligent_doctor/surgical_agent/src/logger/: log_middleware.py  logger.py
app_examples/intelligent_doctor/surgical_agent/src/services/: auth_service.py  diagnosis_service.py
app_examples/intelligent_doctor/surgical_agent/tests/: test_direct_medical_data_optimization.py
frontend/: .gitignore  (+12 more)
(+401 files in other folders)
